--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,8 @@
 		"hollowtree.vue-snippets",
 		"ms-azuretools.vscode-docker",
 		"esbenp.prettier-vscode",
-		"formulahendry.auto-rename-tag"
+		"formulahendry.auto-rename-tag",
+		"usernamehw.errorlens"
 	],
 	"shutdownAction": "stopContainer"
 }
